--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,9 @@ body {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
 }
-
+/* img {
+  display: block;
+} */
 p {
   font-size: 0.9375rem;
   color: #999999;
@@ -45,10 +47,6 @@ ul li {
   display: inline-flex;
   flex-direction: row;
   flex-wrap: wrap;
-}
-
-.flex-container-column {
-  flex-direction: column;
 }
 
 .flex-end {
@@ -144,8 +142,8 @@ nav ul li a {
 a.logo {
   font-size: 1.875rem;
   line-height: 30px;
-  font-family: myriad-pro, sans-serif;
-  font-weight: 700;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
   font-style: normal;
   text-decoration: none;
   color: var(--green);
@@ -161,17 +159,47 @@ a.logo {
   font-weight: 400;
   font-style: normal;
   color: var(--light-black);
+  display: inline-flex;
+  vertical-align: top;
 }
 
-.our-services p {
-  max-width: 290px;
-}
 ul.our-services li {
   width: 400px;
   margin-bottom: 100px;
 }
-.our-services img {
+
+.our-services section {
+  display: inline-flex;
+  flex-direction: column;
+  padding-left: 96px;
+}
+
+.our-services li::before {
+  width: 32px;
+  height: 32px;
   margin: 0 30px;
+  background-repeat: no-repeat;
+  position: absolute;
+  content: "";
+}
+.css-service::before {
+  background-image: url("../img/articles/5.png");
+}
+.creativity-service::before {
+  background-image: url("../img/articles/3.png");
+}
+.photography-service::before {
+  background-image: url("../img/articles/1.png");
+}
+.webdesign-service::before {
+  background-image: url("../img/articles/2.png");
+}
+.digital-service::before {
+  background-image: url("../img/articles/6.png");
+}
+
+.seo-service::before {
+  background-image: url("../img/articles/4.png");
 }
 
 /* OUR TEAM */
@@ -183,7 +211,7 @@ ul.our-services li {
   text-align: center;
 }
 .our-team ul li {
-  display: inline-block;
+  display: inline-flex;
   width: 380px;
   margin-right: 30px;
 }
@@ -211,12 +239,6 @@ ul.our-services li {
   margin-right: 0;
 }
 
-.person-image {
-  display: block;
-  margin-bottom: 31px;
-  position: relative;
-}
-
 .person-image-gradient {
   background-image: -moz-linear-gradient(
     90deg,
@@ -238,42 +260,46 @@ ul.our-services li {
   visibility: hidden;
   position: absolute;
 }
+.person {
+}
 
-.person-overlay {
+.person-wrap::before {
+  content: "";
   top: 0;
   left: 0;
   background-color: var(--green);
   width: 100%;
   height: 100%;
-  visibility: hidden;
   position: absolute;
-}
-
-.person-image:hover .person-overlay {
   animation: HoverAnimation 200ms linear;
   visibility: visible;
+  z-index: -1;
 }
-.person-image:hover .person-image-gradient {
+.person-wrap:hover .person-image-gradient {
   animation: HoverAnimation 200ms linear;
   transform: translate(-10px, -10px);
   visibility: visible;
   z-index: 2;
 }
-.person-image:hover .person-img {
+.person-wrap:hover .person-img {
   animation: HoverAnimation 200ms linear;
   transform: translate(-10px, -10px);
   visibility: visible;
   z-index: 1;
 }
-.person-img {
-  position: absolute;
+
+.service li.person {
+  display: flex;
 }
-.person-image {
+.person-wrap {
   position: relative;
   width: 380px;
   height: 470px;
+  margin-bottom: 31px;
 }
-
+.person {
+  flex-direction: column;
+}
 .social-icons-wrap {
   position: absolute;
   left: 78px;
@@ -284,7 +310,7 @@ ul.our-services li {
 }
 
 .social-icons-wrap button {
-  display: inline-block;
+  display: inline-flex;
   width: 56px;
   height: 56px;
   background-repeat: no-repeat;
