--- a/css/style.css
+++ b/css/style.css
@@ -273,18 +273,24 @@ ul.our-services li {
   width: 100%;
   height: 100%;
   position: absolute;
-  animation: HoverAnimation 200ms linear;
+  animation-name: HoverAnimation;
+  transition-duration: 200ms;
+  transition-timing-function: linear;
   visibility: visible;
   z-index: -1;
 }
 .person-wrap:hover .person-image-gradient {
-  animation: HoverAnimation 200ms linear;
+  animation: HoverAnimation;
+  transition-duration: 200ms;
+  transition-timing-function: linear;
   transform: translate(-10px, -10px);
   visibility: visible;
   z-index: 2;
 }
 .person-wrap:hover .person-img {
-  animation: HoverAnimation 200ms linear;
+  animation: HoverAnimation;
+  transition-duration: 200ms;
+  transition-timing-function: linear;
   transform: translate(-10px, -10px);
   visibility: visible;
   z-index: 1;
